# python-winsdk

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  build.ps1  generate.ps1  pyproject.toml  setup.py
.github/workflows/: msys.yaml  publish.yaml
cppwinrt/winrt/: Windows.AI.MachineLearning.Preview.h  Windows.AI.MachineLearning.h  Windows.ApplicationModel.Activation.h  Windows.ApplicationModel.AppExtensions.h  Windows.ApplicationModel.AppService.h  Windows.ApplicationModel.Appointments.AppointmentsProvider.h  Windows.ApplicationModel.Appointments.DataProvider.h  Windows.ApplicationModel.Appointments.h  Windows.ApplicationModel.Background.h  Windows.ApplicationModel.Calls.Background.h  Windows.ApplicationModel.Calls.Provider.h  Windows.ApplicationModel.Calls.h  Windows.ApplicationModel.Chat.h  Windows.ApplicationModel.CommunicationBlocking.h  Windows.ApplicationModel.Contacts.DataProvider.h  Windows.ApplicationModel.Contacts.Provider.h  Windows.ApplicationModel.Contacts.h  Windows.ApplicationModel.ConversationalAgent.h  Windows.ApplicationModel.Core.h  Windows.ApplicationModel.DataTransfer.DragDrop.Core.h  Windows.ApplicationModel.DataTransfer.DragDrop.h  Windows.ApplicationModel.DataTransfer.ShareTarget.h  Windows.ApplicationModel.DataTransfer.h  Windows.ApplicationModel.Email.DataProvider.h  Windows.ApplicationModel.Email.h  Windows.ApplicationModel.ExtendedExecution.Foreground.h  Windows.ApplicationModel.ExtendedExecution.h  Windows.ApplicationModel.Holographic.h  Windows.ApplicationModel.LockScreen.h  Windows.ApplicationModel.Payments.Provider.h  Windows.ApplicationModel.Payments.h  Windows.ApplicationModel.Preview.Holographic.h  Windows.ApplicationModel.Preview.InkWorkspace.h  Windows.ApplicationModel.Preview.Notes.h  Windows.ApplicationModel.Resources.Core.h  Windows.ApplicationModel.Resources.Management.h  Windows.ApplicationModel.Resources.h  Windows.ApplicationModel.Search.Core.h  Windows.ApplicationModel.Search.h  Windows.ApplicationModel.SocialInfo.Provider.h  (+307 more)
docs/: conf.py  index.rst  types.rst
docs/api/: index.rst  windows.rst  winsdk.rst
pywinrt/winsdk/: __init__.py  _winrt.pyi
samples/: password_vault.py  pdf.py  pickers.py  rss.py  toast_notification.md  toast_notification.py  wifi_connectivity.py  xml.py
(+2304 files in other folders)
